--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -51,6 +51,13 @@ jobs:
               NAME_VALUE="instance-${{ matrix.instance }}"
           fi
 
+          location /static/ {
+              alias ${PROJECT_PATH}/static/;
+              add_header Cache-Control "no-cache, no-store, must-revalidate";
+              add_header Pragma "no-cache";
+              add_header Expires "0";
+          }
+
           # Construir el dominio completo
           FULL_DOMAIN="${NAME_VALUE}.${DOMAIN_BASE}"
 
