--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -677,6 +677,37 @@ jobs:
           # Rama: ${BRANCH_NAME} - Persona: ${PERSON_NAME}
           # Actualizado: $(date)
 
+          # PROXY PARA OSRM (SNAP-TO-ROADS)
+          location /osrm/ {
+              rewrite ^/osrm/(.*) /\$1 break;
+              proxy_pass http://localhost:5001;
+              proxy_http_version 1.1;
+              proxy_set_header Host \$host;
+              proxy_set_header X-Real-IP \$remote_addr;
+              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto \$scheme;
+              
+              # Timeouts para OSRM
+              proxy_connect_timeout 60s;
+              proxy_send_timeout 60s;
+              proxy_read_timeout 60s;
+              
+              # CORS para permitir acceso desde JavaScript
+              add_header 'Access-Control-Allow-Origin' '*' always;
+              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+              add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+              
+              # Manejar preflight requests
+              if (\$request_method = 'OPTIONS') {
+                  add_header 'Access-Control-Allow-Origin' '*';
+                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                  add_header 'Access-Control-Max-Age' 1728000;
+                  add_header 'Content-Type' 'text/plain; charset=utf-8';
+                  add_header 'Content-Length' 0;
+                  return 204;
+              }
+          }
+
           location = /test {
               return 301 /test/;
           }
@@ -729,7 +760,7 @@ jobs:
           # Verificar y recargar Nginx
           if sudo nginx -t; then
             sudo systemctl reload nginx
-            echo "✅ Nginx configurado para /test"
+            echo "✅ Nginx configurado para /test y OSRM"
           else
             echo "❌ Error en configuración de Nginx"
             sudo nginx -t
