--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -694,6 +694,7 @@ jobs:
               proxy_connect_timeout 60s;
               proxy_send_timeout 60s;
               proxy_read_timeout 60s;
+              proxy_hide_header 'Access-Control-Allow-Origin';
               
               # CORS para permitir acceso desde JavaScript
               add_header 'Access-Control-Allow-Origin' '*' always;
